2016-03-09  Matt Baker  <mattbaker@apple.com>

        Web Inspector: Timelines UI redesign: use DataGridNode for TimelineView selection path components
        https://bugs.webkit.org/show_bug.cgi?id=154954
        <rdar://problem/24947939>

        Reviewed by Timothy Hatcher.

        This patch adds a new path component, TimelineDataGridNodePathComponent,
        for creating a path component from the current grid selection. This is
        needed since TimelineViews will no longer have an associated content tree
        outline once the navigation sidebar is removed.

        TimelineDataGridNode has new protected methods, "displayName" and
        "iconClassNames", which are used to populate hierarchical path components,
        create grid node data, and create cell content.

        TimelineView subclasses share a certain amount of boilerplate code for
        getting selection path components and handling path component selection.
        In the future we may be able to reduce this code by introducing a new
        DataGridTimelineView base class.

        * UserInterface/Main.html:
        Added/removed files.

        * UserInterface/Views/LayoutTimelineDataGridNode.js:
        (WebInspector.LayoutTimelineDataGridNode.prototype.get data):
        (WebInspector.LayoutTimelineDataGridNode.prototype.createCellContent):
        (WebInspector.LayoutTimelineDataGridNode):
        (WebInspector.LayoutTimelineDataGridNode.prototype.get record): Deleted.
        Moved to base class.

        * UserInterface/Views/LayoutTimelineView.js:
        (WebInspector.LayoutTimelineView.prototype.get selectionPathComponents):
        (WebInspector.LayoutTimelineView.prototype.dataGridNodePathComponentSelected):
        (WebInspector.LayoutTimelineView.prototype.treeElementPathComponentSelected): Deleted.
        TimelineView tree outlines are going away.

        * UserInterface/Views/MemoryTimelineView.js: